AGT-6 fix de un update
